# limedev

./: .gitignore  .pre-commit-config.yaml  README.md  install.py  install.toml  pyproject.toml  readme.py  tox.ini
.github/_subworkflows/: _tests.yaml
.github/actions/: _build.yaml
.github/actions/build-publish/: action.yaml
.github/actions/min-version/: action.yaml
.github/actions/package/: action.yaml
.github/actions/test/: action.yaml
.github/reusable/: release.yaml  verify.yaml
.github/workflows/: merge.yaml  package.yaml  paths.yaml  pr-create.yaml  publish.yaml  publish_candidate.yaml  publish_main.yaml  release.yaml  test-action-package.yaml  test-functional.yaml  test-package.yaml  tests.yaml  verify.yaml
.readme/: .changelog.md
dependencies/: dev.txt  requirements_all.txt  requirements_dev.txt  requirements_package.txt  requirements_test-typing.txt  requirements_test-unittests.txt  requirements_test.txt  requirements_test_functional.txt  test.txt
readme/: .changelog.md  changelog.md  readme.py
src/limedev/: CLI.py  _API.py  __init__.py  _api.py  _aux.py  _cli.py  _profiling.py  benchmarking.py  cli.py  linting.py  package.py  readme.py  test.py
src/limedev/configs/: .pre-commit-config.yaml  .pylintrc
src/limedev/configs/.github/workflows/: tests.yaml
src/limedev/configs/3.11/.github/workflows/: publish_candidate.yaml  publish_main.yaml  tests.yaml
src/limedev/configs/3.11/tests/: .pylintrc
src/limedev/configs/3.12/.github/workflows/: publish_candidate.yaml  publish_main.yaml  tests.yaml
src/limedev/configs/3.12/tests/: .pylintrc
src/limedev/configs/fallback/: ruff.toml
src/limedev/configs/tests/: .pylintrc
src/limedev/package/: _api.py  _cli.py
tests/: .pylintrc  benchmarking.py  benchmarking.yaml  mypy.ini  performance.py  performance.yaml  profiling.py
tests/profiles/: .pstats
tests/unittests/: _aux.py  test_.py  test_public.py
tests/unittests/package/: test_.py
tests/unittests/readme/: test_.py
tests/unittests/test/: test_.py
workflows/: publish_candidate.yaml  publish_main.yaml
